# clipcc-desktop-tauri

./: .eslintrc.js  .gitignore  README.md  package.json  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
scripts/: fetchMediaLibraryAssets.js  patch-gui.js
scripts/patches/: lazy-blocks.js
src/: ScratchDesktopAppStateHOC.jsx  ScratchDesktopAppStateHOC.tsx  ScratchDesktopGUIHOC.jsx  ScratchDesktopGUIHOC.tsx  TauriStorageHelper.js  TauriStorageHelper.ts  app.css  app.jsx  app.tsx  index.css  index.d.tsx  index.html  index.jsx  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src/extensions/: channel.tsx  extensions.css  extensions.html  extensions.tsx  plugin-card.css  plugin-card.tsx  plugin.ts  search.css  search.tsx
